# Mikan-Bot

./: README.md  main.py  pyproject.toml
cogs/: emoji_react.py  test_commands.py  word_frequency.py
